--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ header a:hover{
 }
 #showcase{
 	min-height:500px;
-	background:url('../img/logo.jpg') no-repeat 0 -540px;
+	background:url('logo.jpg') no-repeat 0 -540px;
 }
 #showcase h1{
 	margin-top: 300px;
@@ -154,4 +154,5 @@ footer{
 		width: 100%;
 		margin-bottom: 5px;
 	}
+
 }
